--- a/MakefilesTemplates/MainApplication/Makefile
+++ b/MakefilesTemplates/MainApplication/Makefile
@@ -1,9 +1,4 @@
-#The Directories, Source, Includes, Objects, Binary and Resources
-SRCDIR      := src
 
-#write -l library
-LIB         :=  -l$(MODULEB)\
-	-l$(MODULEC)
 #write -I $(INCDIR)
 INCDEP      := -I src/Fold\
 	-I src/Functions\
@@ -15,7 +10,6 @@ INCDEP      := -I src/Fold\
 #---------------------------------------------------------------------------------
 BUILDDIR    := ../../$(BUILDDIRECTORY)/$(VERSION)
 TARGETDIR   := ../../$(TARGETDIRECTORY)/$(VERSION)
-LIBRARYPATH := -L ../../$(LIBDIRECTORY)/$(VERSION)
 
 SOURCES     := $(shell find $(SRCDIR) -type f -name *.$(SRCEXT))
 OBJECTS     := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.$(OBJEXT))) 
@@ -25,8 +19,7 @@ OBJECTS     := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.$(OBJE
 #COMPILE PART
 $(TARGETDIR)/$(TARGET):  $(OBJECTS)
 	@mkdir -p $(dir $@)
-	$(CC) -o $@ $? $(LIBRARYPATH) $(LIB)  $(LDFLAGS)
-
+	$(CC) -o $@ $? $(LDFLAGS) 
 $(BUILDDIR)/%.$(OBJEXT): $(SRCDIR)/%.$(SRCEXT)
 	@mkdir -p $(dir $@)
 	$(CC) $(CFLAGS)  $(MACROS) -c $< $(INCDEP) -o $@  
