Added config files for compatibility with autoconf

--- a/MakefilesTemplates/MainApplication/Makefile
+++ b/MakefilesTemplates/MainApplication/Makefile
@@ -1,9 +1,4 @@
-
-#write -I $(INCDIR)
-INCDEP      := -I src/Fold\
-	-I src/Functions\
-	-I ../StaticLibTest/src/\
-	-I ../SharedLibTest/src/
+include Makefile.config
 
 #---------------------------------------------------------------------------------
 #DO NOT EDIT BELOW THIS LINE
