Modified headers compatibility

--- a/Src_Modules/Application/Makefile.config
+++ b/Src_Modules/Application/Makefile.config
@@ -1,5 +1,5 @@
 #write -I $(INCDIR)
 INCDEP      := -I src/Fold\
 	-I src/Functions\
-	-I ../StaticLibTest/src/\
+	-I ../../$(HEADERSDIRECTORY)/$(MODULEB)/\
 	-I ../SharedLibTest/src/
