--- a/Src_Modules/StaticLibTest/Makefile
+++ b/Src_Modules/StaticLibTest/Makefile
@@ -3,22 +3,20 @@
 #---------------------------------------------------------------------------------
 LIBDIR	    := ../../$(LIBDIRECTORY)/$(VERSION)
 BUILDDIR    := ../../$(BUILDDIRECTORY)/$(VERSION)
-HEADDIR	    := ../../$(HEADERSDIRECTORY)/$(VERSION)
+include Makefile.config
+HEADDIR	    := ../../$(HEADERSDIRECTORY)/$(LIBNAME)
 
 SOURCES     := $(shell find $(SRCDIR) -type f -name *.$(SRCEXT))
 OBJECTS     := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.$(OBJEXT)))
 HEADERS	    := $(shell find $(SRCDIR) -type f -name *.$(HEADEXT))
-
+COPYHEAD    := $(patsubst $(SRCDIR)/%,$(HEADDIR)/%,$(HEADERS))
 #---------------------------------------------------------------------------------
 
-include Makefile.config
+all: $(COPYHEAD) $(PACKAGINGNAME)
 
-all: $(HEADDIR) $(PACKAGINGNAME)
-
-$(HEADDIR):
-	@mkdir -p $(dir $@/$(LIBNAME))
-	rsync -r --delete $(HEADERS) $(HEADDIR)/$(LIBNAME)/
-
+$(COPYHEAD):
+	@mkdir -p $(HEADDIR)
+	rsync -r --delete $(HEADERS) $(HEADDIR)/
 #COMPILE PART
 $(PACKAGINGNAME):  $(OBJECTS) 
 	@mkdir -p $(dir $@)
