--- a/MakefilesTemplates/FirstMakefile/Makefile.config
+++ b/MakefilesTemplates/FirstMakefile/Makefile.config
@@ -4,16 +4,18 @@ CROSSCOMPILE_SSH_HOST 	:= 192.168.1.70
 CROSSCOMPILE_DIR 	:= /home/pi
 
 #The Directories and extensions SECTION
-SRC_MODULES_DIR	:= Src_Modules
-BUILDDIRECTORY 	:= Objects
-TARGETDIRECTORY	:= Release
-RESDIR      	:= Resources
-LIBDIRECTORY	:= Libraries
+SRC_MODULES_DIR	   := Src_Modules
+BUILDDIRECTORY 	   := Objects
+TARGETDIRECTORY	   := Release
+RESDIR      	   := Resources
+LIBDIRECTORY	   := Libraries
+HEADERSDIRECTORY   := Headers
 
 DLEXT	:= so
 SLEXT	:= a
 SRCEXT	:= c
 OBJEXT	:= o
+HEADEXT	:= h
 SRCDIR	:= src
 
 #Modules SECTION
