--- a/Src_Modules/SharedLibTest/Makefile
+++ b/Src_Modules/SharedLibTest/Makefile
@@ -1,15 +1,22 @@
 #---------------------------------------------------------------------------------
 #DO NOT EDIT BELOW THIS LINE
 #---------------------------------------------------------------------------------
-BUILDDIR    := ../../$(BUILDDIRECTORY)/$(VERSION)
 LIBDIR	    := ../../$(LIBDIRECTORY)/$(VERSION)
+BUILDDIR    := ../../$(BUILDDIRECTORY)/$(VERSION)
+include Makefile.config
+HEADDIR	    := ../../$(HEADERSDIRECTORY)/$(LIBNAME)
 
 SOURCES     := $(shell find $(SRCDIR) -type f -name *.$(SRCEXT))
 OBJECTS     := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.$(OBJEXT)))
+HEADERS	    := $(shell find $(SRCDIR) -type f -name *.$(HEADEXT))
+COPYHEAD    := $(patsubst $(SRCDIR)/%,$(HEADDIR)/%,$(HEADERS))
 #---------------------------------------------------------------------------------
 
-include Makefile.config
+all: $(COPYHEAD) $(PACKAGINGNAME)
 
+$(COPYHEAD):
+	@mkdir -p $(HEADDIR)
+	rsync -r --delete $(HEADERS) $(HEADDIR)/
 #COMPILE PART
 $(PACKAGINGNAME):  $(OBJECTS) 
 	@mkdir -p $(dir $@)
