installation procedure added

--- a/Makefile.config
+++ b/Makefile.config
@@ -7,7 +7,7 @@ CROSSCOMPILE_DIR 	:= /home/pi
 SRC_MODULES_DIR	   := Src_Modules
 BUILDDIRECTORY 	   := Objects
 TARGETDIRECTORY	   := Release
-RESDIR      	   := Resources
+RESDIRECTORY  	   := Resources
 LIBDIRECTORY	   := Libraries
 HEADERSDIRECTORY   := Headers
 
@@ -36,9 +36,15 @@ VERSION		:= Debugx64
 CC 		:= gcc
 ARCH		:= ar rcs
 LIBSEARCHDIR	:= $(LIBDIRECTORY)/$(VERSION)/
-LIBSRSEARCHPATH	:= $(LIBDIRECTORY)/$(VERSION)/
-LIBINSTALLDIR	:= 
+LIBSRSEARCHPATH	:= /usr/lib/
 CFLAGS		:= -g -Wall
 LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
 	-Wl,-rpath,$(LIBSRSEARCHPATH)
-MACROS		:= -D DEBUG
+MACROS		:= -D DEBUG\
+		-D Path=/usr/
+
+#RUNNING 
+
+EXECINSTALLDIR	:= /usr/bin/
+LIBINSTALLDIR	:= /usr/lib/
+RESINSTALLDIR	:= /usr/
