--- a/Makefile.config
+++ b/Makefile.config
@@ -41,7 +41,7 @@ CFLAGS		:= -g -Wall
 LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
 	-Wl,-rpath,$(LIBSRSEARCHPATH)
 MACROS		:= -D DEBUG\
-		-D Path=/usr/
+		-D RESOURCES=\"/home/paul/Cprojects/Make/TemplatesProject/Resources/\"
 
 #RUNNING 
 
