--- a/Src_Modules/Application/Makefile
+++ b/Src_Modules/Application/Makefile
@@ -7,14 +7,14 @@ BUILDDIR    := ../../$(BUILDDIRECTORY)/$(VERSION)
 TARGETDIR   := ../../$(TARGETDIRECTORY)/$(VERSION)
 
 SOURCES     := $(shell find $(SRCDIR) -type f -name *.$(SRCEXT))
-OBJECTS     := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.$(OBJEXT))) 
+OBJECTS     := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.$(OBJEXT)))
 
 #---------------------------------------------------------------------------------
 
 #COMPILE PART
 $(TARGETDIR)/$(TARGET):  $(OBJECTS)
 	@mkdir -p $(dir $@)
-	$(CC) -o $@ $? $(LDFLAGS) 
+	$(CC) -o $@ $(OBJECTS)  $(LDFLAGS)
 $(BUILDDIR)/%.$(OBJEXT): $(SRCDIR)/%.$(SRCEXT)
 	@mkdir -p $(dir $@)
 	$(CC) $(CFLAGS)  $(MACROS) -c $< $(INCDEP) -o $@  
