--- a/Src_Modules/StaticLibTest/Makefile
+++ b/Src_Modules/StaticLibTest/Makefile
@@ -21,7 +21,7 @@ $(COPYHEAD):
 #COMPILE PART
 $(PACKAGINGNAME):  $(OBJECTS) 
 	@mkdir -p $(dir $@)
-	$(PACKAGINGINSTRUCTIONS)  $@ $?
+	$(PACKAGINGINSTRUCTIONS)  $@ $(OBJECTS)
 
 $(BUILDDIR)/%.$(OBJEXT): $(SRCDIR)/%.$(SRCEXT)
 	@mkdir -p $(dir $@) 
