Modified workaround Resources

--- a/Makefile.config
+++ b/Makefile.config
@@ -41,10 +41,10 @@ CFLAGS		:= -g -Wall
 LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
 	-Wl,-rpath,$(LIBSRSEARCHPATH)
 MACROS		:= -D DEBUG\
-		-D RESOURCES=\"/home/paul/Cprojects/Make/TemplatesProject/Resources/\"
+		-D RESOURCES=\"/home/paul/.TemplateMakefiles/Resources/\"
 
 #RUNNING 
 
 EXECINSTALLDIR	:= /usr/bin/
 LIBINSTALLDIR	:= /usr/lib/
-RESINSTALLDIR	:= /usr/
+RESINSTALLDIR	:= ~/.TemplateMakefiles/
