Terminated Release configuration and uninstallation of resources

--- a/Makefile.config
+++ b/Makefile.config
@@ -31,20 +31,30 @@ LIBSTOLINK    	:=  -l $(MODULEB)\
 	-l $(MODULEC)
 
 #Compiler and archiver SECTION
+#LIBRSEARCHPATH should have an absolute path and coincide with
+#LIBINSTALLDIR if installation is required
 TARGET 		:= Application
 VERSION		:= Debugx64
 CC 		:= gcc
 ARCH		:= ar rcs
 LIBSEARCHDIR	:= $(LIBDIRECTORY)/$(VERSION)/
-LIBSRSEARCHPATH	:= /usr/lib/
+LIBSRSEARCHPATH	:= /home/paul/.TemplateMakefiles/$(LIBDIRECTORY)/
 CFLAGS		:= -g -Wall
 LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
 	-Wl,-rpath,$(LIBSRSEARCHPATH)
-MACROS		:= -D DEBUG\
+MACROS		:= -D RELEASE\
 		-D RESOURCES=\"/home/paul/.TemplateMakefiles/Resources/\"
 
-#RUNNING 
+#RUNNING
 
-EXECINSTALLDIR	:= /usr/bin/
-LIBINSTALLDIR	:= /usr/lib/
+#This 3 variables should be left in blank if no installation is required
+#otherwise problems may occur
+
+#When used, all 3 variables should be filled even if  only one variable is
+#required
+
+#Use / at the end
+
+EXECINSTALLDIR	:= ~/.TemplateMakefiles/$(TARGETDIRECTORY)/
+LIBINSTALLDIR	:= ~/.TemplateMakefiles/$(LIBDIRECTORY)/
 RESINSTALLDIR	:= ~/.TemplateMakefiles/
