Added notes for next interoperability with autoconf

--- a/Makefile.config
+++ b/Makefile.config
@@ -39,9 +39,12 @@ CC 		:= gcc
 ARCH		:= ar rcs
 LIBSEARCHDIR	:= $(LIBDIRECTORY)/$(VERSION)/
 LIBSRSEARCHPATH	:= /home/paul/.TemplateMakefiles/$(LIBDIRECTORY)/
-CFLAGS		:= -g -Wall
+CFLAGS		:= -Wall
+#-g for Debug
 LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
 	-Wl,-rpath,$(LIBSRSEARCHPATH)
+#-static
+
 MACROS		:= -D RELEASE\
 		-D RESOURCES=\"/home/paul/.TemplateMakefiles/Resources/\"
 
