Modified file order

--- a/Makefile.config
+++ b/Makefile.config
@@ -40,13 +40,16 @@ ARCH		:= ar rcs
 LIBSEARCHDIR	:= $(LIBDIRECTORY)/$(VERSION)/
 LIBSRSEARCHPATH	:= /home/paul/.TemplateMakefiles/$(LIBDIRECTORY)/
 CFLAGS		:= -Wall
-#-g for Debug
 LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
 	-Wl,-rpath,$(LIBSRSEARCHPATH)
-#-static
-
 MACROS		:= -D RELEASE\
 		-D RESOURCES=\"/home/paul/.TemplateMakefiles/Resources/\"
+
+#-static
+#-g for Debug
+# version x64 static write in autoconf
+
+
 
 #RUNNING
 
