--- a/Makefile.config
+++ b/Makefile.config
@@ -27,24 +27,24 @@ MODULED := DataStructures
 DEPMODULES	:= $(MODULEC) $(MODULEB) 
 MAINMODULE	:= $(MODULEA)
 
-LIBSTOLINK    	:=  -l $(MODULEB)\
-	-l $(MODULEC)
-
-#Compiler and archiver SECTION
-#LIBRSEARCHPATH should have an absolute path and coincide with
-#LIBINSTALLDIR if installation is required
+#Compiler SECTION
 TARGET 		:= Application
 VERSION		:= Debugx64
 CC 		:= gcc
 ARCH		:= ar rcs
-LIBSEARCHDIR	:= $(LIBDIRECTORY)/$(VERSION)/
-LIBSRSEARCHPATH	:= /home/paul/.TemplateMakefiles/$(LIBDIRECTORY)/
 CFLAGS		:= -Wall
-LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
-	-Wl,-rpath,$(LIBSRSEARCHPATH)
 MACROS		:= -D RELEASE\
 		-D RESOURCES=\"/home/paul/.TemplateMakefiles/Resources/\"
-		
+
+#Linker SECTION
+#LIBRSEARCHPATH should have an absolute path and coincide with
+#LIBINSTALLDIR if installation is required
+LIBSTOLINK    	:=  -l $(MODULEB)\
+		-l $(MODULEC)
+LIBSEARCHDIR	:= $(LIBDIRECTORY)/$(VERSION)/
+LIBSRSEARCHPATH	:= /home/paul/.TemplateMakefiles/$(LIBDIRECTORY)/
+LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
+	-Wl,-rpath,$(LIBSRSEARCHPATH)		
 #-static
 #-g for Debug
 # version x64 static write in autoconf
