Added makefile functionality for specifing different arquitecture's instructions version control and libraries compilation and linking type

--- a/Makefile.config
+++ b/Makefile.config
@@ -1,8 +1,3 @@
-#CROSSCOMPILE SECTION
-CROSSCOMPILE_HOSTNAME 	:= pi
-CROSSCOMPILE_SSH_HOST 	:= 192.168.1.70
-CROSSCOMPILE_DIR 	:= /home/pi
-
 #The Directories and extensions SECTION
 SRC_MODULES_DIR	   := Src_Modules
 BUILDDIRECTORY 	   := Objects
@@ -29,12 +24,16 @@ MAINMODULE	:= $(MODULEA)
 
 #Compiler SECTION
 TARGET 		:= Application
-VERSION		:= Debugx64
+TESTTYPE	:= Release
+INSTRUCTIONS	:= x86_64
+LIBRARIESTYPE	:= DYNANDSTATIC
+VERSION		:= $(TESTTYPE)$(INSTRUCTIONS)$(LIBRARIESTYPE)
 CC 		:= gcc
 ARCH		:= ar rcs
 CFLAGS		:= -Wall
 MACROS		:= -D RELEASE\
 		-D RESOURCES=\"/home/paul/.TemplateMakefiles/Resources/\"
+#-g for Debug
 
 #Linker SECTION
 #LIBRSEARCHPATH should have an absolute path and coincide with
@@ -46,10 +45,11 @@ LIBSRSEARCHPATH	:= /home/paul/.TemplateMakefiles/$(LIBDIRECTORY)/
 LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
 	-Wl,-rpath,$(LIBSRSEARCHPATH)		
 #-static
-#-g for Debug
-# version x64 static write in autoconf
 
-
+#CROSSCOMPILE SECTION
+CROSSCOMPILE_HOSTNAME 	:= pi
+CROSSCOMPILE_SSH_HOST 	:= 192.168.1.70
+CROSSCOMPILE_DIR 	:= /home/pi
 
 #RUNNING
 
