--- a/MakefilesTemplates/FirstMakefile/Makefile.config
+++ b/MakefilesTemplates/FirstMakefile/Makefile.config
@@ -1,8 +1,3 @@
-#CROSSCOMPILE SECTION
-CROSSCOMPILE_HOSTNAME 	:= pi
-CROSSCOMPILE_SSH_HOST 	:= 192.168.1.70
-CROSSCOMPILE_DIR 	:= /home/pi
-
 #The Directories and extensions SECTION
 SRC_MODULES_DIR	   := Src_Modules
 BUILDDIRECTORY 	   := Objects
@@ -27,23 +22,34 @@ MODULED := DataStructures
 DEPMODULES	:= $(MODULEC) $(MODULEB) 
 MAINMODULE	:= $(MODULEA)
 
-LIBSTOLINK    	:=  -l $(MODULEB)\
-	-l $(MODULEC)
-
-#Compiler and archiver SECTION
-#LIBRSEARCHPATH should have an absolute path and coincide with
-#LIBINSTALLDIR if installation is required
+#Compiler SECTION
 TARGET 		:= Application
-VERSION		:= Debugx64
+TESTTYPE	:= Release
+INSTRUCTIONS	:= x86_64
+LIBRARIESTYPE	:= DYNANDSTATIC
+VERSION		:= $(TESTTYPE)$(INSTRUCTIONS)$(LIBRARIESTYPE)
 CC 		:= gcc
 ARCH		:= ar rcs
-LIBSEARCHDIR	:= $(LIBDIRECTORY)/$(VERSION)/
-LIBSRSEARCHPATH	:= /home/paul/.TemplateMakefiles/$(LIBDIRECTORY)/
-CFLAGS		:= -g -Wall
-LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
-	-Wl,-rpath,$(LIBSRSEARCHPATH)
+CFLAGS		:= -Wall
 MACROS		:= -D RELEASE\
 		-D RESOURCES=\"/home/paul/.TemplateMakefiles/Resources/\"
+#-g for Debug
+
+#Linker SECTION
+#LIBRSEARCHPATH should have an absolute path and coincide with
+#LIBINSTALLDIR if installation is required
+LIBSTOLINK    	:=  -l $(MODULEB)\
+		-l $(MODULEC)
+LIBSEARCHDIR	:= $(LIBDIRECTORY)/$(VERSION)/
+LIBSRSEARCHPATH	:= /home/paul/.TemplateMakefiles/$(LIBDIRECTORY)/
+LDFLAGS		:= -L ../../$(LIBSEARCHDIR) $(LIBSTOLINK) \
+	-Wl,-rpath,$(LIBSRSEARCHPATH)		
+#-static
+
+#CROSSCOMPILE SECTION
+CROSSCOMPILE_HOSTNAME 	:= pi
+CROSSCOMPILE_SSH_HOST 	:= 192.168.1.70
+CROSSCOMPILE_DIR 	:= /home/pi
 
 #RUNNING
 
