Added libraries modification aware makefile

--- a/Src_Modules/Application/Makefile
+++ b/Src_Modules/Application/Makefile
@@ -5,15 +5,20 @@ include Makefile.config
 #---------------------------------------------------------------------------------
 BUILDDIR    := ../../$(BUILDDIRECTORY)/$(VERSION)
 TARGETDIR   := ../../$(TARGETDIRECTORY)/$(VERSION)
+LIBSDIR    := ../../$(LIBDIRECTORY)/$(VERSION)
 
 SOURCES     := $(shell find $(SRCDIR) -type f -name *.$(SRCEXT))
 OBJECTS     := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.$(OBJEXT)))
 DEPENDS     := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.d))
+STATLIBS    := $(wildcard $(LIBSDIR)/*.$(SLEXT))
+DYNLIBS	    := $(wildcard $(LIBSDIR)/*.$(DLEXT))
 
 #---------------------------------------------------------------------------------
 
 #COMPILE PART
-$(TARGETDIR)/$(TARGET):  $(OBJECTS)
+
+$(TARGETDIR)/$(TARGET):  $(OBJECTS) $(STATLIBS) $(DYNLIBS)
+	@echo $(STATLIBS)
 	@mkdir -p $(dir $@)
 	$(CC) -o $@ $(OBJECTS)  $(LDFLAGS)
 
